[package]
name = "bokeh-plotting"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
askama = "0.7.2"
log = "0.4.6"
env_logger = "0.6.0"

[build-dependencies]
askama = "0.7.2"
serde_json = "1.0.33"
serde = "1.0.80"
log = "0.4.6"
env_logger = "0.6.0"
quote = "0.6.10"
proc-macro2 = "0.4.23"
